--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".KPostActivity">
+        </activity>
+        <activity android:name=".KPostActivity2">
+        </activity>
     </application>
 
 </manifest>
